Subsume edrn.sync
This commit makes the [edrn.sync](https://github.com/EDRN/edrn.sync) package obsolete and puts all our LDAP utilities for EDRN into a single repository.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = jpl.edrn.ldap.sync
+version = file: src/jpl/edrn/ldap/sync/VERSION.txt
 author = Sean Kelly
 author_email = kelly@seankelly.biz
-description = LDAP "All EDRN" Sync for the Early Detection Research Network Directory
+description = LDAP utilities for the Early Detection Research Network Directory
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = apache-2.0
@@ -27,8 +28,8 @@ packages = find:
 package_dir =
     = src
 install_requires =
-    python-ldap == 3.3.1
-    click == 8.0.1
+    python-ldap ~= 3.3.1
+    rdflib ~= 6.2.0
 namespace_packages =
     jpl
     jpl.edrn
@@ -41,4 +42,6 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    all-edrn-sync = jpl.edrn.ldap.sync.main:main
+    all-edrn-sync = jpl.edrn.ldap.sync.allgroup:main
+    usersync = jpl.edrn.ldap.sync.usersync:main
+    groupsync = jpl.edrn.ldap.sync.groupsync:main
