Add CRYPT detector

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,3 +45,5 @@ console_scripts =
     all-edrn-sync = jpl.edrn.ldap.sync.allgroup:main
     usersync = jpl.edrn.ldap.sync.usersync:main
     groupsync = jpl.edrn.ldap.sync.groupsync:main
+    cryptpasswords = jpl.edrn.ldap.sync.crypt:main
+
